--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,42 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
 a {
   text-decoration: none;
-  color: #767676;
 }
 
 li {
   list-style: none;
 }
 
+h1 {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  margin: 0 auto;
+  width: 70%;
+}
+
+h1, h2 {
+  text-transform: uppercase;
+  text-align: center;
+}
+
 button {
   background-color: #d40cca;
-  border: none;
   color: #FFFFFF;
-  border-radius: 3px;
-  padding: 15px 30px;
-  font-size: 15px;
+  padding: 10px 22px;
+  border: none;
+  border-radius: 4px;
 }
 
 header {
@@ -50,6 +70,28 @@ header .logo span {
 header nav .menu {
   display: flex;
   gap: 10px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  text-align: center;
+}
+header nav a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #747474;
+  font-size: 0.7rem;
+  font-weight: 700;
+  transition: color 0.3s, background-color 0.3s;
+}
+@media (max-width: 340px) {
+  header nav a {
+    padding: 6px;
+  }
+}
+header nav a:hover {
+  color: #FFFFFF;
+  background-color: #d40cca;
 }
 
 .hero {
@@ -63,6 +105,23 @@ header nav .menu {
   align-items: center;
   text-align: center;
   font-size: 10px;
+}
+
+.quality {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  gap: 1rem;
+}
+@media (min-width: 600px) {
+  .quality {
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+    height: 250px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
