--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,10 +1,10 @@
 @use "../abstracts/variables" as *;
 
-@mixin button-theme($bgcolor: $framboise) {
-  background-color: $bgcolor;
+
+@mixin button($bg-color: $framboise, $text-color: $white) {
+  background-color: $bg-color;
+  color: $text-color;
+  padding: 10px 22px;
   border: none;
-  color: $white;
-  border-radius: 3px;
-  padding: 15px 30px;
-  font-size: 15px;
+  border-radius: 4px;
 }
