--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,6 +1,7 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
+
 button {
-    @include button-theme;
+    @include button;
 }
