--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,6 +31,28 @@ header {
       .menu {
         display: flex;
         gap: 10px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        text-align: center;
       }
+
+       a {
+
+          text-transform: uppercase;
+          text-decoration: none;
+          color: $gray;
+          font-size: 0.7rem;
+          font-weight: 700;
+          transition: color 0.3s, background-color 0.3s;
+          @media (max-width: 340px) {
+            padding: 6px;
+          }
+          &:hover {
+            color: $white;
+            background-color: $framboise;
+          }
+        }
     }
 }
