--- a/css/main.css
+++ b/css/main.css
@@ -82,22 +82,127 @@ header nav a {
   color: #747474;
   font-size: 0.7rem;
   font-weight: 700;
-  transition: color 0.3s, background-color 0.3s;
 }
 @media (max-width: 340px) {
   header nav a {
     padding: 6px;
   }
 }
-header nav a:hover {
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #444444;
+  gap: 15px;
+  padding-bottom: 20px;
+  height: 150px;
+}
+footer a {
+  padding-top: 20px;
+  font-family: "Create Round";
   color: #FFFFFF;
-  background-color: #d40cca;
+  margin: 0 auto;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+footer a span {
+  color: #d40cca;
+}
+footer p {
+  color: #767676;
+  font-size: 0.7rem;
+  font-weight: 700;
+}
+
+@media (min-width: 600px) {
+  .contact {
+    height: 200px;
+  }
+}
+.contact_title {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+}
+.contact_title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #BDECF6;
+  margin-top: 10px;
+  width: 310px;
+  margin: 10px auto;
+  max-width: 100%;
+}
+.contact_description {
+  font-size: 0.7rem;
+  text-align: center;
+  padding: 0 6px;
+  color: #767676;
+}
+@media (min-width: 600px) {
+  .contact_description {
+    font-size: 0.8rem;
+    width: 50%;
+    margin: 20px auto;
+    margin-top: 10px;
+  }
+}
+.contact_form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 32px;
+  max-width: 600px;
+}
+@media (min-width: 600px) {
+  .contact_form {
+    flex-direction: row;
+    justify-content: center;
+    gap: 12px;
+    margin: 0 auto;
+  }
+}
+.contact_form_button {
+  padding: 10px 10px;
+  margin-top: 1rem;
+  align-self: flex-start;
+}
+@media (min-width: 600px) {
+  .contact_form_button {
+    align-self: flex-start;
+  }
+}
+.contact_form_stuff {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 10px;
+}
+@media (min-width: 600px) {
+  .contact_form_stuff {
+    width: auto;
+  }
+}
+.contact label {
+  font-weight: bold;
+  margin-right: 8px;
+  width: 42px;
+}
+.contact input {
+  padding: 6px 8px;
 }
 
 .hero {
   background-image: url("/image/main.jpg");
-  background-position: 50% 58%;
-  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 280px;
   color: #FFFFFF;
   display: flex;
   flex-direction: column;
@@ -105,6 +210,113 @@ header nav a:hover {
   align-items: center;
   text-align: center;
   font-size: 10px;
+}
+@media (min-width: 600px) {
+  .hero {
+    height: 500px;
+    background-position: center;
+    background-size: auto;
+  }
+}
+.hero h1 {
+  color: #FFFFFF;
+  max-width: 90%;
+  font-weight: 500;
+}
+@media (min-width: 600px) {
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+}
+.hero span {
+  display: block;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+@media (min-width: 600px) {
+  .hero span {
+    font-size: 3rem;
+  }
+}
+
+.promotion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefef;
+  height: 600px;
+  margin-top: 35px;
+  margin-bottom: 25px;
+  padding: 16px;
+  gap: 15px;
+}
+@media (min-width: 600px) {
+  .promotion {
+    flex-direction: row;
+    justify-content: center;
+    height: auto;
+  }
+}
+.promotion_card {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  box-sizing: border-box;
+  width: 95%;
+}
+@media (min-width: 600px) {
+  .promotion_card {
+    width: 450px;
+    margin-top: 20px;
+    margin-bottom: 52px;
+  }
+}
+.promotion_card:nth-child(1) {
+  background-image: url("/image/article_image-1.jpg");
+}
+.promotion_card:nth-child(2) {
+  background-image: url("/image/article_image-2.jpg");
+}
+.promotion_content {
+  background-color: #FFFFFF;
+  height: 250px;
+  min-width: 130px;
+  max-width: 180px;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px 0 0 8px;
+  opacity: 0.96;
+}
+.promotion_title {
+  position: relative;
+  margin: 0;
+  width: 90%;
+  text-align: center;
+  font-size: 1rem;
+}
+.promotion_title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  margin-top: 16px;
+  margin-bottom: 10px;
+}
+.promotion_description {
+  font-style: italic;
+  text-align: center;
+  color: #767676;
+  font-size: 12px;
+}
+.promotion_button {
+  margin-top: 1rem;
+  padding: 7px 20px;
 }
 
 .quality {
@@ -121,6 +333,29 @@ header nav a:hover {
     justify-content: center;
     gap: 3rem;
     height: 250px;
+  }
+}
+.quality_icon {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 0.5rem;
+}
+.quality_stuff {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1rem;
+}
+.quality_description {
+  text-align: center;
+  font-size: 0.7rem;
+  color: #767676;
+}
+@media (min-width: 600px) {
+  .quality_description {
+    max-width: 75%;
+    font-size: 0.8rem;
   }
 }
 
