--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @use "./components/bases";
 @use "./components/button";
 @use "./layout/header";
+@use "./layout/footer";
 @use "./sections/contact";
 @use "./sections/hero";
 @use "./sections/promotion";
