--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -2,8 +2,10 @@
 
 .hero {
     background-image: url("/image/main.jpg");
-    background-position: 50% 58%;
-    height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 280px;
     color: $white;
     display: flex;
     flex-direction: column;
@@ -11,4 +13,30 @@
     align-items: center;
     text-align: center;
     font-size: 10px;
+
+    @media (min-width: $desktop-width) {
+    height: 500px;
+    background-position: center;
+    background-size: auto;
+    }
+
+    h1 {
+        color: $white;
+        max-width: 90%;
+        font-weight: 500;
+
+        @media (min-width: $desktop-width) {
+            font-size: 2.5rem;
+        }
+    }
+
+    span {
+        display: block;
+        font-weight: 700;
+        font-size: 1.2rem;
+
+        @media (min-width: $desktop-width) {
+        font-size: 3rem;
+        }
+    }
 }
