--- a/scss/sections/_quality.scss
+++ b/scss/sections/_quality.scss
@@ -14,4 +14,29 @@
         gap: 3rem;
         height: 250px;
     }
+
+    &_icon {
+        width: 60px;
+        height: 60px;
+        margin-bottom: 0.5rem;
+    }
+
+    &_stuff {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    &_description {
+        text-align: center;
+        font-size: 0.7rem;
+        color: $font-color;
+
+        @media (min-width: $desktop-width) {
+        max-width: 75%;
+        font-size: 0.8rem;
+        }
+    }
 }
