--- a/css/main.css
+++ b/css/main.css
@@ -167,26 +167,21 @@ footer p {
     margin: 0 auto;
   }
 }
-.contact_form_button {
-  padding: 10px 10px;
-  margin-top: 1rem;
-  align-self: flex-start;
-}
-@media (min-width: 600px) {
-  .contact_form_button {
-    align-self: flex-start;
-  }
-}
 .contact_form_stuff {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  gap: 1rem;
 }
 @media (min-width: 600px) {
   .contact_form_stuff {
-    width: auto;
+    flex-direction: row;
   }
+}
+.contact_button {
+  padding: 10px 10px;
 }
 .contact label {
   font-weight: bold;
@@ -215,7 +210,6 @@ footer p {
   .hero {
     height: 500px;
     background-position: center;
-    background-size: auto;
   }
 }
 .hero h1 {
