--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,9 @@ header {
 }
 @media (min-width: 600px) {
   header {
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    gap: 24px;
+    gap: 25px;
   }
 }
 header .logo {
