--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,9 +10,9 @@ header {
     box-shadow: 0 2px 4px rgb(0, 0, 0, 0.1);
 
     @media (min-width: $desktop-width) {
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
-      gap: 24px;
+      gap: 25px;
     }
 
     .logo {
